# Camera2Libyuv

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cyl/camera2libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libusb.cpp  libusb_utils.cpp  libusb_utils.h  libyuv.cpp  libyuv_utils.cpp  libyuv_utils.h
app/src/main/cpp/libusb/: CMakeLists.txt  readme.txt  swordfish.rules  test_swordfish.cpp
app/src/main/cpp/libusb/include/: list.h  log.h  log_file.h  ring_queue.h  swordfish.h  utils.h  yuv_rgb.h
app/src/main/cpp/libusb/libusb-1.0.24/: CMakeLists.txt
app/src/main/cpp/libusb/libusb-1.0.24/android/jni/: Application.mk
app/src/main/cpp/libusb/libusb-1.0.24/libusb/: core.c  io.c  libusb-1.0.def  libusb.h
app/src/main/cpp/libusb/libusb-1.0.24/libusb/os/: darwin_usb.c  haiku_pollfs.cpp  linux_usbfs.c  netbsd_usb.c  openbsd_usb.c  sunos_usb.c  windows_usbdk.c  windows_winusb.c
app/src/main/cpp/libusb/src/: list.c  log.c  log_file.c  ring_queue.c  swordfish.c  timer.c  trace.c  utils.c  yuv_rgb.c
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/cyl/camera2libyuv/camera/camera2/: Camera2Activity.java
app/src/main/java/com/cyl/camera2libyuv/utils/: LibusbUtils.java  LibyuvUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/cyl/camera2libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
